--- a/bootcamp/pom.xml
+++ b/bootcamp/pom.xml
@@ -7,6 +7,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>bootcamp-java</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <springframework.version>4.3.0.RELEASE</springframework.version>
+    <jackson.library>2.7.5</jackson.library>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -19,5 +23,37 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.40</version>
     </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>${springframework.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>${springframework.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>${springframework.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>3.1.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${jackson.library}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.dataformat</groupId>
+        <artifactId>jackson-dataformat-xml</artifactId>
+        <version>${jackson.library}</version>
+      </dependency>
+
   </dependencies>
 </project>
