--- a/bootcamp/pom.xml
+++ b/bootcamp/pom.xml
@@ -3,13 +3,17 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.bootcamp.java</groupId>
   <artifactId>bootcamp-java</artifactId>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>bootcamp-java</name>
   <url>http://maven.apache.org</url>
   <properties>
+    <jdk.version>1.8</jdk.version>
     <springframework.version>4.3.0.RELEASE</springframework.version>
     <jackson.library>2.7.5</jackson.library>
+    <jstl.version>1.2</jstl.version>
+    <logback.version>1.0.13</logback.version>
+    <jcl-over-slf4j.version>1.7.5</jcl-over-slf4j.version>
   </properties>
   <dependencies>
     <dependency>
@@ -38,12 +42,23 @@
         <artifactId>spring-webmvc</artifactId>
         <version>${springframework.version}</version>
       </dependency>
+    <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>${jstl.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+      <version>${jcl-over-slf4j.version}</version>
+    </dependency>
 
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>3.1.0</version>
-      </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>${logback.version}</version>
+    </dependency>
+
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
@@ -54,6 +69,21 @@
         <artifactId>jackson-dataformat-xml</artifactId>
         <version>${jackson.library}</version>
       </dependency>
-
   </dependencies>
+  <build>
+    <finalName>BootCampJava</finalName>
+
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>${jdk.version}</source>
+          <target>${jdk.version}</target>
+        </configuration>
+      </plugin>
+    </plugins>
+
+  </build>
 </project>
