--- a/bootcamp/pom.xml
+++ b/bootcamp/pom.xml
@@ -23,9 +23,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.40</version>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>4.3.0.RELEASE</version>
     </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
@@ -69,6 +69,11 @@
         <artifactId>jackson-dataformat-xml</artifactId>
         <version>${jackson.library}</version>
       </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.9</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>BootCampJava</finalName>
