Cambios en Web-INF

--- a/bootcamp/src/main/webapp/WEB-INF/web.xml
+++ b/bootcamp/src/main/webapp/WEB-INF/web.xml
@@ -3,17 +3,33 @@
         "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+  <display-name>Bootcamp App</display-name>
+
+
   <servlet>
-    <servlet-name>springrest</servlet-name>
+    <servlet-name>CXFServlet</servlet-name>
     <servlet-class>
-      org.springframework.web.servlet.DispatcherServlet
+      org.apache.cxf.transport.servlet.CXFServlet
     </servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>springrest</servlet-name>
-    <url-pattern>/</url-pattern>
+    <servlet-name>CXFServlet</servlet-name>
+    <url-pattern>/*</url-pattern>
   </servlet-mapping>
+
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>/WEB-INF/springrest-servlet.xml</param-value>
+  </context-param>
+
+
+
+  <listener>
+    <listener-class>
+      org.springframework.web.context.ContextLoaderListener
+    </listener-class>
+  </listener>
+
 </web-app>
