--- a/bootcamp/src/main/webapp/WEB-INF/web.xml
+++ b/bootcamp/src/main/webapp/WEB-INF/web.xml
@@ -3,33 +3,17 @@
         "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Bootcamp App</display-name>
-
-
+  <display-name>Archetype Created Web Application</display-name>
   <servlet>
-    <servlet-name>CXFServlet</servlet-name>
+    <servlet-name>springrest</servlet-name>
     <servlet-class>
-      org.apache.cxf.transport.servlet.CXFServlet
+      org.springframework.web.servlet.DispatcherServlet
     </servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>CXFServlet</servlet-name>
-    <url-pattern>/*</url-pattern>
+    <servlet-name>springrest</servlet-name>
+    <url-pattern>/</url-pattern>
   </servlet-mapping>
-
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>/WEB-INF/springrest-servlet.xml</param-value>
-  </context-param>
-
-
-
-  <listener>
-    <listener-class>
-      org.springframework.web.context.ContextLoaderListener
-    </listener-class>
-  </listener>
-
 </web-app>
