--- a/bootcamp/pom.xml
+++ b/bootcamp/pom.xml
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -100,7 +100,10 @@
       <artifactId>bonecp</artifactId>
       <version>0.7.1.RELEASE</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.5</version> </dependency>
 
     <dependency>
       <groupId>ch.qos.logback</groupId>
